[tool.poetry]

name = "forge-format"
packages = [
    { include = "forgeformat" },
]

version = "0.3.0"
description = "Formatting library for Forge"
authors = ["Dave Gaeddert <dave.gaeddert@dropseed.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://www.forgepackages.com/"
documentation = "https://www.forgepackages.com/docs/"
repository = "https://github.com/forgepackages/forge-format"
keywords = ["django", "saas", "forge", "framework"]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]

[tool.poetry.scripts]
"forge-format" = "forgeformat:cli"

[tool.poetry.dependencies]
python = "^3.8"
forge-core = {git = "https://github.com/forgepackages/forge-core", rev = "next"}
click = ">=8.0.0"
python-dotenv = "*"  # forge-core also uses dotenv, which is <1.0 so this is easier to manage
black = ">=22.0.0"
ruff = "^0.0.226"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
ipdb = "^0.13.9"
Django = "^4.0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
